--- a/MusicaNoba_v1/Components/Layout/NavMenu.razor
+++ b/MusicaNoba_v1/Components/Layout/NavMenu.razor
@@ -23,5 +23,10 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="songstats">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> songs
+            </NavLink>
+        </div>
     </nav>
 </div>
